# ai-trader

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/processed/: sample_submission.csv  test.csv  train.csv
docs/: data.md  evaluation.md  task.md
scripts/: calculate_metrics.py  evaluate.py  generate_submission.py  validate_submission.py
src/app/: __init__.py  chat_app.py  chat_cli.py  cli.py  config.py  llm.py  main.py
src/app/adapters/: __init__.py  finam.py  finam_client.py
src/app/core/: __init__.py  config.py  llm.py
src/app/domain/: __init__.py
src/app/interfaces/: __init__.py  call_logger.py  chat_app.py  chat_cli.py  mcp_agent.py  mcp_streamlit_service.py
src/app/mcp/: __init__.py  models.py  server.py
src/app/modes/: __init__.py
src/app/tools/: __init__.py  handlers.py  registry.py  schemas.py
src/app/viz/: __init__.py  charts.py
src/finam_client/: __init__.py  client.py
tests/: test_submission_validator.py
tests/interfaces/: test_jsonschema_to_args_schema.py  test_mcp_output_parser.py
tests/mcp/: test_async_finam_client.py  test_server_tools.py
