[tool.poetry]
name = "finam-x-hse-trade-ai-hack-trader"
version = "0.1.0"
description = "Trader AI Assistant over Finam TradeAPI"
authors = ["Maxim Kirilyuk <werserk@inbox.ru>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "^2.11.9"
requests = "^2.32.5"
python-dotenv = "^1.1.1"
click = "^8.1.7"
tqdm = "^4.67.1"
streamlit = "^1.40.2"
langchain = "^0.3.7"
langchain-openai = "^0.2.5"
mcp = "^1.1.0"
numpy = "1.26.4"
httpx = {version = "^0.28.1", extras = ["http2"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
ruff = "^0.13.3"
types-requests = "^2.32.0"

[tool.poetry.scripts]
validate-submission = "scripts.validate_submission:main"
generate-submission = "scripts.generate_submission:main"
calculate-metrics = "scripts.calculate_metrics:main"
evaluate = "scripts.evaluate:evaluate"
chat-cli = "src.app.interfaces.chat_cli:main"
mcp-agent = "src.app.interfaces.mcp_agent:main_cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "Q",
    "RET",
    "ARG",
    "TCH",
    "ANN",
    "RUF",
    "C90",
]
ignore = [
    "CPY001",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["ARG001", "ARG002"]
"scripts/**/*" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=case_baseline --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
